[project]
name = "bda-nesprisa"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "dreinon",email = "danielreinon@outlook.com"},
]
dependencies = [
    "faker>=22.4.0",
    "sqlmodel>=0.0.14",
    "pycountry>=23.12.11",
    "requests>=2.31.0",
    "bs4>=0.0.2",
    "oracledb>=2.0.1",
    "python-dateutil>=2.8.2",
]
requires-python = "==3.10.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = "false"
